--- a/public/admin.html
+++ b/public/admin.html
@@ -71,7 +71,7 @@
             <h3 class="text-2xl font-semibold text-gray-800">Questions Library</h3>
             <span class="ml-auto bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm font-medium">Preloaded</span>
           </div>
-          <div id="questionsList" class="space-y-4">
+          <div id="questionsList" class="space-y-4 max-h-96 overflow-y-auto pr-2">
             <div class="flex items-center justify-center py-8">
               <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-500"></div>
               <span class="ml-3 text-gray-600">Loading questions...</span>
@@ -228,7 +228,7 @@
       }
     });
 
-    endBtn.onclick = () => {
+    document.getElementById("endBtn").onclick = () => {
       socket.emit("endQuestion");
     };
 
@@ -237,5 +237,5 @@
       console.log("questionEnded", payload);
     });
   </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96ce723e55ea7e6f',t:'MTc1NDgxNzkzMC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d0722e95897eca',t:'MTc1NDgzODg5OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
